fix contrast and finish questions

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,7 @@ input, select {
     text-align: center;
     margin: 0;
     padding: 0.1em 1em;
-    background-color: rgba(128, 128, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .sticky-nav {
